# Jir

./: .gitignore  BUILD.md  BUILD.zh-CN.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
bat/: version.json
src/: cli.rs  help.rs  jdk.rs  main.rs  prompt.rs
src/commands/: current.rs  install.rs  list.rs  mod.rs  switch.rs  uninstall.rs
