[package]
name = "jir-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
indicatif = "0.18.4"
reqwest = { version = "0.13.3", features = ["blocking"] }
serde_json = "1.0.149"
terminal_size = "0.4.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2", "aes-crypto", "time"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
dialoguer = "0.12.0"
junction = "2.0.0"
